# chat-with-data

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
demo_apps/: langchain_app.py  main.py  pandasai_app.py
notebooks/: 01_chat_with_data_playground.ipynb
