[tool.poetry]
name = "chat-with-data"
version = "1.0.0"
description = "An app to have conversational pandas dataframes"
authors = ["Datafy Associates <info@datafyassociates.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pandasai_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = ">=1.29.0"
pandasai = {version = ">=1.5"}
tabulate = "^0.9.0"
jupyterlab = "^4.0.3"
langchain =  {extras = ["docarray"], version = "^0.0.352"}
hnswlib = "^0.7.0"
langchain-experimental = "^0.0.47"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.2.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
